--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ Flask-Login==0.5.0
 Flask-Cors==3.0.10
 Flask-Bcrypt==0.7.1
 python-dotenv==0.19.0
+flake8==6.1.0
+mccabe==0.7.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+pylint==2.5.3
+astroid==2.4.2
+# pip freeze > requirements.txt para librerias creadas en el entorno virtual
