--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,9 @@ pyflakes==3.1.0
 pylint==2.5.3
 astroid==2.4.2
 radon==6.0.1
+
+## Dependencias del Sistema
+# - **TeX Live**:
+#   - Versión: TeX Live 2019/Debian (pdfTeX 3.14159265-2.6-1.40.20)
+#   - Instalación: sudo apt-get install texlive-full
 # pip freeze > requirements.txt para librerias creadas en el entorno virtual
