--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
-Flask-Cors==3.0.10
-Flask-Bcrypt==0.7.1
+Flask==2.3.2
+Werkzeug==2.3.4
+Flask-SQLAlchemy==3.0.5
+Flask-Login==0.6.2
+Flask-Cors==4.0.0
+Flask-Bcrypt==1.0.1
+Flask-WTF==1.2.1
 python-dotenv==0.19.0
-flake8==6.1.0
-mccabe==0.7.0
-pycodestyle==2.11.1
-pyflakes==3.1.0
 pylint==2.5.3
-astroid==2.4.2
 radon==6.0.1
-checkstyle==8.29
 cpplint==1.6.1
 lizard==1.17.10
-cppcheck==1.90
-clang==10.0.0-4
-llvm==10.0-50
-libclang-dev==10.0-50
-javalang=0.13.0
+javalang==0.13.0
+libclang==16.0.6
+psycopg2-binary
 ## Dependencias del Sistema
 # - **TeX Live**:
 #   - Versión: TeX Live 2019/Debian (pdfTeX 3.14159265-2.6-1.40.20)
